--- a/package.json
+++ b/package.json
@@ -13,13 +13,26 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0"
+    "axios": "^0.18.0",
+    "date-fns": "^1.29.0",
+    "es6-promise": "^4.2.4",
+    "eventemitter2": "^5.0.1",
+    "gsap": "^1.20.4",
+    "hammerjs": "^2.0.8",
+    "intersection-observer": "^0.5.0",
+    "loadjs": "^3.5.4",
+    "nuxt": "^1.4.0",
+    "pixi-filters": "^2.6.1",
+    "pixi.js": "^4.7.3",
+    "ua-parser-js": "^0.7.18",
+    "virtual-scroll": "^1.3.1",
+    "webfontloader": "^1.6.28",
+    "yakuhanjp": "^3.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-vue": "^4.5.0"
   }
 }
