--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "run-s lint:*",
+    "format:js": "prettier-eslint 'src/!(plugins)/*.{js,vue}' --write",
+    "format": "run-s format:*"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -31,8 +33,22 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
+    "css-mqpacker": "^6.0.2",
     "eslint": "^4.19.1",
+    "eslint-config-standard": "^12.0.0-alpha.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.5.0"
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-vue": "^4.5.0",
+    "npm-run-all": "^4.1.3",
+    "postcss-flexbugs-fixes": "^3.3.1",
+    "prettier": "^1.12.1",
+    "prettier-eslint-cli": "^4.7.1",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
