--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-vue": "^4.5.0",
     "npm-run-all": "^4.1.3",
+    "postcss-easings": "^1.0.1",
     "postcss-flexbugs-fixes": "^3.3.1",
+    "postcss-utilities": "^0.8.0",
     "prettier": "^1.12.1",
     "prettier-eslint-cli": "^4.7.1",
     "pug": "^2.0.3",
