--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nuxt": "^1.4.0",
     "pixi-filters": "^2.6.1",
     "pixi.js": "^4.7.3",
+    "sanitize.css": "^5.0.0",
     "ua-parser-js": "^0.7.18",
     "virtual-scroll": "^1.3.1",
     "webfontloader": "^1.6.28",
